cabal-version:      3.0
name:               tk
version:            0.1.0.0
license:            ISC
license-file:       LICENSE
author:             Iavor S. Diatchki
maintainer:         iavor.diatchki@gmail.com
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall
    default-extensions: BlockArguments, ImportQualifiedPost, NamedFieldPuns, LambdaCase

executable tk
    import:           warnings
    main-is:          Main.hs
    other-modules:    Piece, Transform, Rule2D, Action, Pattern, Rule, Board, Vec2D, GUI
    build-depends:    base ^>=4.20.0.0, containers, vector, gloss, SFML
    hs-source-dirs:   app
    default-language: Haskell2010
