cabal-version:      3.0
name:               tk
version:            0.1.0.0
license:            ISC
license-file:       LICENSE
author:             Iavor S. Diatchki
maintainer:         iavor.diatchki@gmail.com
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common things
    ghc-options: -Wall
    default-extensions:
      BlockArguments,
      ImportQualifiedPost,
      NamedFieldPuns,
      LambdaCase,
      DisambiguateRecordFields
    default-language: Haskell2010

library
  import: things
  hs-source-dirs: src
  exposed-modules: GUI
  other-modules:
    GUI.ResourcePool,
    GUI.Scene
  build-depends: base, SFML


executable tk
    import:           things
    main-is:          Main.hs
    other-modules:    Piece, Transform, Rule2D, Action, Pattern, Rule, Board, Vec2D
    build-depends:    base, containers, vector, gloss, tk
    hs-source-dirs:   app

