cabal-version:      3.0
name:               tk
version:            0.1.0.0
license:            ISC
license-file:       LICENSE
author:             Iavor S. Diatchki
maintainer:         iavor.diatchki@gmail.com
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md

data-files:
   resource/font/default.ttf 
   resource/font/OFL.txt

common things
    ghc-options: -Wall
    default-extensions:
      BlockArguments,
      ImportQualifiedPost,
      NamedFieldPuns,
      LambdaCase,
      DisambiguateRecordFields,
      TemplateHaskell,
      GeneralizedNewtypeDeriving,
      BangPatterns
    default-language: Haskell2010

library
  import: things
  hs-source-dirs: src
  exposed-modules:
    GUI,
    GUI.Event,
    GUI.Color,
    GUI.Scene,
    GUI.Text,
    GUI.Texture,
    GUI.Timer,
  other-modules:
    GUI.ResourcePool,
    GUI.Render
    
  build-depends: base, containers, file-embed, bytestring, SFML


executable tk
    import:           things
    main-is:          Main.hs
    other-modules:    Piece, Transform, Rule2D, Action, Pattern, Rule, Board, Vec2D
    build-depends:    base, containers, vector, tk
    hs-source-dirs:   app

